--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Library for the Industruino IND.I/O product
 paragraph=Library to access the I/O channels available on the green screw connectors of the Industruino IND.I/O product.
 category=Signal Input/Output
 url=https://github.com/Industruino/Indio
-architectures=avr
+architectures=*
 includes=Indio.h,Wire.h
